--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading">Loading, please wait ...</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="info">Info</string>
+    <string name="ok">ok</string>
+    <string name="about">About</string>
 </resources>
